<resources>
    <string name="app_namee">BeFresh</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    login string value-->

    <string name="sign_in_with_google">Sign in with google</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgot_you_password"><u>Forgot your password?</u></string>
    <string name="not_a_member_create_an_account"><u>Create An Account</u></string>
    <string name="log_in"><u>Log in</u></string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_signup"><u>Already have an account? Signup</u></string>

    <!--    error string-->

    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_no_internet_connection">No Internet connection available</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="create_account">Create Account</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="favourite">favourite</string>
    <string name="account">Account</string>
    <string name="condition">By placing an order you agree to our \n<font color="black">Terms </font> And <font color="black">Condition</font> </string>
    <string name="fruit_line">Apples Are Nutritious.Apples May Be God For Weight Loss.\nApples May Be Good For Your Heart.As Part Of A Healtful And Varied Diet.</string>
    <string name="location_line">300 Sector 61 Sahibjada Ajit Singh Nagar</string>
    <string name="google_maps_key">AIzaSyBBgOn1FtmzyjUnX0Xl6xMFqXYFmSEgdZg</string>

</resources>