<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/shopFragment"
        android:title="@string/shop"
        android:icon="@drawable/home_unselected"
        />
    <item
        android:id="@+id/exploreFragment"
        android:title="@string/explore"
        android:icon="@drawable/search_unselected"
        />
    <item
        android:title="@string/cart"
        android:id="@+id/cartFragment"
        android:icon="@drawable/videoos"
        />
    <item
        android:id="@+id/favouriteFragment"
        android:title="@string/favourite"
        android:icon="@drawable/checkin_unselected"
        />
    <item
        android:id="@+id/accountFragment"
        android:title="@string/account"
        android:icon="@drawable/cchat"
        />
</menu>